Implemented querying DynamoDB table by criteria. Encapsulated user ID calculation based on security context.
